--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,12 @@ function(add_assembly_targets target_name source_file)
     endif()
 endfunction()
 
+# Add lineinfo and source-in-ptx flags to all CUDA compilations
+add_compile_options("$<$<COMPILE_LANGUAGE:CUDA>:-lineinfo;--src-in-ptx>")
+
 # in debug mode, add debug symbols to device code
 # this disables most optimizations and kills performance
-add_compile_options("$<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-G;-src-in-ptx>")
+add_compile_options("$<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-G>")
 # add_compile_options("--ptxas-options=-v")
 
 # Configure header file search paths
