--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,15 @@ if(NOT DEFINED CUDA_COMPUTE_CAPABILITY)
     set(CUDA_COMPUTE_CAPABILITY 86)
 endif()
 
+message(STATUS "CUDA_COMPUTE_CAPABILITY RAW: [${CUDA_COMPUTE_CAPABILITY}]")
+
+# Strip quotes if present (in case passed as quoted string)
+# When passed via -DFOO="value", the quotes become part of the value
+# Use REGEX to remove leading/trailing quotes
+string(REGEX REPLACE "^\"(.*)\"$" "\\1" CUDA_COMPUTE_CAPABILITY "${CUDA_COMPUTE_CAPABILITY}")
+
+message(STATUS "CUDA_COMPUTE_CAPABILITY AFTER: [${CUDA_COMPUTE_CAPABILITY}]")
+
 # Options for generating PTX and SASS assembly files alongside executables
 option(GENERATE_PTX "Generate PTX assembly files" ON)
 option(GENERATE_SASS "Generate SASS assembly files" ON)
@@ -45,13 +54,17 @@ function(add_assembly_targets target_name source_file)
     endif()
 endfunction()
 
-# Add lineinfo and source-in-ptx flags to all CUDA compilations
-add_compile_options("$<$<COMPILE_LANGUAGE:CUDA>:-lineinfo;--src-in-ptx>")
+# NOTE: We don't use add_compile_options() with generator expressions here because
+# some CMake versions incorrectly apply CUDA flags to C++ files. Instead, we'll set
+# these flags per-target using set_property() below.
 
-# in debug mode, add debug symbols to device code
-# this disables most optimizations and kills performance
-add_compile_options("$<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-G>")
-# add_compile_options("--ptxas-options=-v")
+# # Add lineinfo and source-in-ptx flags to all CUDA compilations
+# add_compile_options("$<$<COMPILE_LANGUAGE:CUDA>:-lineinfo>" "$<$<COMPILE_LANGUAGE:CUDA>:--src-in-ptx>")
+
+# # in debug mode, add debug symbols to device code
+# # this disables most optimizations and kills performance
+# add_compile_options("$<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-G>")
+# # add_compile_options("--ptxas-options=-v")
 
 # Configure header file search paths
 include_directories(${CUDA_INCLUDE_DIRS})
@@ -61,81 +74,81 @@ aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC)
 
 # generate main executable with all kernels (for compatibility)
 add_executable(sgemm sgemm.cu ${SRC})
-set_target_properties(sgemm PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_link_libraries(sgemm ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 # generate individual kernel executables for independent benchmarking
 add_executable(sgemm_kernel_0 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_0 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_0 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_0 PRIVATE KERNEL_0=1 FIXED_KERNEL_NUM=0)
 target_link_libraries(sgemm_kernel_0 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_1 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_1 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_1 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_1 PRIVATE KERNEL_1=1 FIXED_KERNEL_NUM=1)
 target_link_libraries(sgemm_kernel_1 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_2 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_2 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_2 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_2 PRIVATE KERNEL_2=1 FIXED_KERNEL_NUM=2)
 target_link_libraries(sgemm_kernel_2 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_3 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_3 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_3 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_3 PRIVATE KERNEL_3=1 FIXED_KERNEL_NUM=3)
 target_link_libraries(sgemm_kernel_3 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_4 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_4 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_4 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_4 PRIVATE KERNEL_4=1 FIXED_KERNEL_NUM=4)
 target_link_libraries(sgemm_kernel_4 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_5 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_5 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_5 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_5 PRIVATE KERNEL_5=1 FIXED_KERNEL_NUM=5)
 target_link_libraries(sgemm_kernel_5 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_6 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_6 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_6 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_6 PRIVATE KERNEL_6=1 FIXED_KERNEL_NUM=6)
 target_link_libraries(sgemm_kernel_6 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_7 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_7 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_7 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_7 PRIVATE KERNEL_7=1 FIXED_KERNEL_NUM=7)
 target_link_libraries(sgemm_kernel_7 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_8 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_8 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_8 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_8 PRIVATE KERNEL_8=1 FIXED_KERNEL_NUM=8)
 target_link_libraries(sgemm_kernel_8 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_9 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_9 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_9 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_9 PRIVATE KERNEL_9=1 FIXED_KERNEL_NUM=9)
 target_link_libraries(sgemm_kernel_9 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_10 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_10 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_10 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_10 PRIVATE KERNEL_10=1 FIXED_KERNEL_NUM=10)
 target_link_libraries(sgemm_kernel_10 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_11 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_11 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_11 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_11 PRIVATE KERNEL_11=1 FIXED_KERNEL_NUM=11)
 target_link_libraries(sgemm_kernel_11 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(sgemm_kernel_12 sgemm.cu ${SRC})
-set_target_properties(sgemm_kernel_12 PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(sgemm_kernel_12 PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_compile_definitions(sgemm_kernel_12 PRIVATE KERNEL_12=1 FIXED_KERNEL_NUM=12)
 target_link_libraries(sgemm_kernel_12 ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(cuBLAS_sgemm cuBLAS_sgemm.cu )
-set_target_properties(cuBLAS_sgemm PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(cuBLAS_sgemm PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_link_libraries(cuBLAS_sgemm ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 
 add_executable(simplest_kernel simplest_kernel.cu)
-set_target_properties(simplest_kernel PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
+set_target_properties(simplest_kernel PROPERTIES CUDA_ARCHITECTURES "${CUDA_COMPUTE_CAPABILITY}")
 target_link_libraries(simplest_kernel ${CUDA_LIBRARIES})
 
 # Add assembly targets for main kernels
